--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <div class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
+          alt="SEO notebook showing content, backlink, headings, mobile compatibility, social media and link buildng"
           class="float-left"
         />
         <h2>Search Engine Optimization</h2>
@@ -48,6 +49,7 @@
       >
         <img
           src="./assets/images/online-reputation-management.jpg"
+          alt="laptop screen showing various graphs and word reputation"
           class="float-right"
         />
         <h2>Online Reputation Management</h2>
@@ -62,6 +64,7 @@
       <div id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
+          alt="table of people with devices showing text bubbles saying share, media, tweet and like"
           class="float-left"
         />
         <h2>Social Media Marketing</h2>
@@ -76,7 +79,10 @@
     <div class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img
+          src="./assets/images/lead-generation.png"
+          alt="gear inside funnel pointing to dollar sign"
+        />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -84,7 +90,10 @@
       </div>
       <div class="benefit-brand">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img
+          src="./assets/images/brand-awareness.png"
+          alt="lightbulb emitting waves with tie"
+        />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -92,7 +101,10 @@
       </div>
       <div class="benefit-cost">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img
+          src="./assets/images/cost-management.png"
+          alt="dollar signs on coins in front of gear"
+        />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
