replaced div with section for class content

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </ul>
       </nav>
     </header>
-    <div class="hero"></div>
-    <div class="content">
+    <img class="hero" />
+    <section class="content">
       <div class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
@@ -75,7 +75,7 @@
           your lead generation.
         </p>
       </div>
-    </div>
+    </section>
     <div class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
