--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <img class="hero" />
     <section class="content">
-      <div class="search-engine-optimization">
+      <section class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           alt="SEO notebook showing content, backlink, headings, mobile compatibility, social media and link buildng"
@@ -42,8 +42,8 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </div>
-      <div
+      </section>
+      <section
         id="online-reputation-management"
         class="online-reputation-management"
       >
@@ -60,8 +60,8 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </div>
-      <div id="social-media-marketing" class="social-media-marketing">
+      </section>
+      <section id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
           alt="table of people with devices showing text bubbles saying share, media, tweet and like"
@@ -74,9 +74,9 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </div>
+      </section>
     </section>
-    <div class="benefits">
+    <aside class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img
@@ -110,7 +110,7 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
-    </div>
+    </aside>
     <div class="footer">
       <h4>Made with ❤️️ by Horiseon</h4>
       <p>&copy; 2024 Horiseon Social Solution Services, Inc.</p>
