--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </section>
     </section>
     <aside class="benefits">
-      <div class="benefit-lead">
+      <section class="benefit-lead">
         <h3>Lead Generation</h3>
         <img
           src="./assets/images/lead-generation.png"
@@ -87,8 +87,8 @@
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </div>
-      <div class="benefit-brand">
+      </section>
+      <section class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img
           src="./assets/images/brand-awareness.png"
@@ -98,8 +98,8 @@
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </div>
-      <div class="benefit-cost">
+      </section>
+      <section class="benefit-cost">
         <h3>Cost Management</h3>
         <img
           src="./assets/images/cost-management.png"
@@ -109,11 +109,11 @@
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </div>
+      </section>
     </aside>
-    <div class="footer">
+    <footer class="footer">
       <h4>Made with ❤️️ by Horiseon</h4>
       <p>&copy; 2024 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
