--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
 
   <body>
-    <header class="header">
+    <div class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <nav>
+      <div>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,11 +25,11 @@
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </nav>
-    </header>
-    <img class="hero" />
-    <section class="content">
-      <section class="search-engine-optimization">
+      </div>
+    </div>
+    <div class="hero"></div>
+    <div class="content">
+      <div class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           alt="SEO notebook showing content, backlink, headings, mobile compatibility, social media and link buildng"
@@ -42,8 +42,8 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </section>
-      <section
+      </div>
+      <div
         id="online-reputation-management"
         class="online-reputation-management"
       >
@@ -60,8 +60,8 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </section>
-      <section id="social-media-marketing" class="social-media-marketing">
+      </div>
+      <div id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
           alt="table of people with devices showing text bubbles saying share, media, tweet and like"
@@ -74,10 +74,10 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </section>
-    </section>
-    <aside class="benefits">
-      <section class="benefit-lead">
+      </div>
+    </div>
+    <div class="benefits">
+      <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img
           src="./assets/images/lead-generation.png"
@@ -87,8 +87,8 @@
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </section>
-      <section class="benefit-brand">
+      </div>
+      <div class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img
           src="./assets/images/brand-awareness.png"
@@ -98,8 +98,8 @@
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </section>
-      <section class="benefit-cost">
+      </div>
+      <div class="benefit-cost">
         <h3>Cost Management</h3>
         <img
           src="./assets/images/cost-management.png"
@@ -109,11 +109,11 @@
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </section>
-    </aside>
-    <footer class="footer">
+      </div>
+    </div>
+    <div class="footer">
       <h4>Made with ❤️️ by Horiseon</h4>
       <p>&copy; 2024 Horiseon Social Solution Services, Inc.</p>
-    </footer>
+    </div>
   </body>
 </html>
